# urlslab-bot

./: .env.example  .gitignore
backend/: .env.example  alembic.ini  index_schema.example.json  index_schema.json  main.py  pyproject.toml
backend/api/v1/: __init__.py
backend/api/v1/chatbots/: __init__.py  chatbots.py
backend/api/v1/documents/: __init__.py  documents.py
backend/api/v1/monitoring/: health.py
backend/api/v1/sessions/: __init__.py  sessions.py
backend/api/v1/settings/: __init__.py  aimodels.py
backend/api/v1/tasks/: __init__.py  tasks.py
backend/api/v1/tenants/: __init__.py  tenants.py
backend/api/v1/users/: users.py
backend/app/controllers/: __init__.py  aimodels.py  auth.py  chatbot.py  document.py  session.py  task.py  tenant.py  user.py
backend/app/models/: __init__.py  aimodel.py  chatbot.py  document.py  session.py  task.py  tenant.py  user.py
backend/app/repositories/: __init__.py  aimodels.py  chatbot.py  document.py  session.py  task.py  tenant.py  user.py
backend/app/schemas/requests/: chat.py  (+4 more)
backend/core/: config.py  server.py
backend/core/chains/: __init__.py  base.py  default_chain.py  templates.py
backend/core/controller/: base.py
backend/core/database/: __init__.py  qdrant_client.py  redis_client.py  session.py  transactional.py
backend/core/exceptions/: base.py
backend/core/factory/: factory.py
backend/core/repository/: base.py
backend/core/security/: jwt.py
backend/core/utils/: document_splitter.py
backend/migrations/: env.py
backend/migrations/versions/: 11761fc744aa_create_the_base_migration.py
(+81 files in other folders)
