[tool.poetry]
name = "urlslab-bot"
version = "0.0.1"
description = "Manage your own context-aware Chatbot with admin panel"
authors = ["Yasha Boroumand <yboroumand@qualityunit.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0, <3.12"
python-multipart = "^0.0.6"
pydantic = { version = "^2.5.2", extras = ["email"] }
pydantic-settings = "^2.1.0"
fastapi = "^0.105.0"
langchain = "^0.0.350"
openai = "^1.5.0"
qdrant-client = "^1.7.0"
tiktoken = "^0.5.2"
click = "^8.1.7"
uvicorn = "^0.24.0"
SQLAlchemy = "^2.0.23"
python-jose = "^3.3.0"
passlib = "^1.7.4"
asyncmy = "^0.2.9"
pymysql = "^1.1.0" # used for migration alembic
pylint = "^3.0.3"
alembic = "^1.13.0"
redis = "^5.0.1"
fastembed = "^0.1.2" # Default Embedding FastEmbed
PyPDF2= "^3.0.1"
python-docx = "^1.1.0"
semver="^3.0.2"
